# video-multisrt-multiHLS

./: .env.example  .gitignore  CLAUDE.md  README.md
.claude/agents/: frontend-developer.md  module-developer.md  orchestrator.md  ui-designer.md
apps/api/: README.md  api.sqlite3  pyproject.toml
apps/api/app/: __init__.py  audit.py  auth.py  config.py  db.py  main.py  models.py  persister.py  queue.py  routes.py  runtime.py  schemas.py  serializers.py  services.py  skill_runner.py  storage.py
apps/api/app/domain/: __init__.py  enums.py  errors.py  file_paths.py  ids.py  state_machine.py
apps/api/tests/: __init__.py  conftest.py  factories.py  test_continue_generate_manifest_packages.py  test_projects_and_runs.py  test_segments.py
apps/web/: index.html  package.json  tailwind.config.ts  tsconfig.json
apps/web/src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
apps/web/src/api/: client.test.ts  client.ts  errors.ts  projectStore.ts  queryKeys.ts  types.ts
apps/web/src/components/: AppShell.tsx  CustomPlayer.test.tsx  CustomPlayer.tsx  EmptyState.tsx  ErrorNotice.tsx  LoadingBlock.tsx  PageHeader.tsx  (+2 more)
docs/: agent-skill-architecture.md  architecture.md  brd.md  original.md  prd.md  requirements.md  spec.md
memory/: video-multisrt-multi-hls.md
tasks/: 00-orchestration-summary.md  _TEMPLATE.md  apps-api.md  apps-web.md  packages-agent-runtime.md  packages-shared-types.md  packages-skills-asr.md  packages-skills-localization.md  packages-skills-media.md  packages-skills-packaging.md  packages-skills-voice.md
tests/: debug_e2e.py  e2e_api_test.py
(+15 files in other folders)
