[project]
name = "video-multisrt-api"
version = "0.1.0"
description = "FastAPI backend for AI short-drama multi-language subtitles and external audio tracks."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.7",
  "SQLAlchemy>=2.0",
  "psycopg[binary]>=3.1",
  "redis>=5.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
